# addis-housing-price-predictor

./: CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
docs/: data_dictionary.md
models/: train-models.md
notebooks/: AddisHouseAnalysis.ipynb
src/: __init__.py  data_generator.py  train.py  utils.py
tests/: __init__.py  test_generator.py
